# howdoIcmake

./: CMakeLists.txt  Makefile  README.md
proj/: main.cc
src/: TutConf.h.in  gfx.cc  gfx.h
